--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,6 @@
 package:
   type: framework
   name: ypf
-  version: 0.1.1
+  version: 0.2.0
   author: 'Juan Pablo Marzetti'
+  installer: 'support/ypf_installer.php'
