--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 package:
   type: framework
   name: ypf
-  version: 0.2.0
+  version: 0.3.0
   author: 'Juan Pablo Marzetti'
-  installer: 'support/ypf_installer.php'
+  installer: support/ypf_installer.php
