Initial documented samples

--- a/new_app/private/config.yml
+++ b/new_app/private/config.yml
@@ -35,60 +35,5 @@ paths:
 #mode: 'production'
 
 environments:
-  development:
-    #application is a mandatory section
-    application:
-      title: '{{application_human_name}}'
-      root: '/home'
-      #enable / disable caching of config files and other resources
-      cache: false
-      log:
-        active: true
-        exclude: []
-
-    #If you need your application to connect to databases you must set at least one connection
-    #currently YPFramework accepts MySQL and SQLite databases.
-    #Each connection must have a name and "main" is mandatory and will be the default database used.
-    databases:
-      main:
-        type: SQLite2
-        name: '{%paths.db}/development.db'
-
-    #Routes are entry points to your application. Any request sent to the server that is not a
-    #file under www path nor a route defined here, will be rejected.
-    routes:
-      home:
-        match: '/home(.:format)'
-        controller: 'home'
-        action: 'index'
-        method: 'get'
-
-    #Plugins to load. If you omit this setting, YPF will load all plugins on extensions/plugins dir,
-    #otherwise it will load only those mentioned here.
-    plugins: []
-      #this means don't load plugins at all.
-
-    #plugin_name:
-    #  setting_1: value
-
-  #Environments can inherit settings from other envirnonments when you append a colon :
-  #and the name of a previous environment.
-  production:development:
-    application:
-      cache: true
-      log:
-        active: true
-        exclude: [SQL, DEBUG]
-
-    databases:
-      main:
-        name: '{%paths.db}/production.db'
-
-
-
-#  noaction:
-#    match: '/:controller(.:format)'
-#    action: 'index'
-
-#  default:
-#    match: '/(:controller(/:action(/:id)))(.:format)'
+  $include: 'support/config/environments/development.yml'
+  $include: 'support/config/environments/production.yml'
